--- a/capsuladiscos/catalogo/templates/catalogo/catalogo.html
+++ b/capsuladiscos/catalogo/templates/catalogo/catalogo.html
@@ -17,8 +17,8 @@
         <div class="col-lg-2 col-md-4 offset-lg-1">
             <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
             <a class="navbar-brand" href="{% url 'disco' disco.id %}"><img class="img-fluid" src="{{disco.caratula.url}}" alt=""></a>
-            <a href="{% url 'disco' disco.id %}">{{disco.titulo}}</a> / 
-            <a href="{% url 'banda' disco.banda.id %}">{{disco.banda}}</a>
+            <a href="{% url 'disco' disco.id %}"><h6>{{disco.titulo}}</a> / 
+            <a href="{% url 'banda' disco.banda.id %}">{{disco.banda}}</h6></a>
         </div>     
     </div>
 {% endfor %}
