--- a/capsuladiscos/core/templates/core/base.html
+++ b/capsuladiscos/core/templates/core/base.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <!--<a class="navbar-brand" href="{% url 'home' %}">Cápsula Discos</a> --><!-- Título redimensiona con tamaño responsivo -->
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'core/img/Capsula_h_low_transp.png' %}"></a>
+            <a href="{% url 'home' %}"><img src="{% static 'core/img/Capsula_h_low_transp.png' %}"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span><!-- Dibuja barras de menú -->
             </button>
