--- a/capsuladiscos/catalogo/templates/catalogo/banda.html
+++ b/capsuladiscos/catalogo/templates/catalogo/banda.html
@@ -16,12 +16,12 @@
          <div class="col-lg-5 col-md-4 offset-lg-1">
          <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
             <img class="img-fluid" src="{{banda.imgBanda.url}}" alt="">
-            {{banda.nombreBanda}}
-            <p>Descripción de la Banda:</p>
+            <h4>{{banda.nombreBanda}}</h4>
+            <p><b>Descripción de la Banda o Solista:</b></p>
             <p>{{banda.descripBanda}}</p>
             
             <!-- INSERTAR ACÁ INTEGRANTES, ROLES DE LA BANDA Y DISCOS -->
-            <p>Integrantes:</p>
+            <p><b>Integrantes:</b></p>
             {% for integrantes in integranteBanda %} <!--TODOS LOS INTGRANTES DE BANDA-->
                 {% if integrantes.banda_id == banda.id %} <!-- INTEGRANTES DE ESTE ID DE BANDA-->
                 <p>
@@ -36,16 +36,17 @@
                 {% endif %}
             {% endfor %}    
             <br>
-            <p>Discos Publicados:</p>
+            <p><b>Discos Publicados:</b></p>
             {% for disco in discos %} <!--TODOS LOS DISCOS -->
                 {% if disco.banda_id == banda.id %} <!-- DISCOS DE ESTE ID DE BANDA-->
                 <p>
                 <a class="navbar-brand" href="{% url 'disco' disco.id %}"><img class="img-fluid" src="{{disco.caratula.url}}" alt=""></a>
-                <a href="{% url 'disco' disco.id %}">{{disco.titulo}}</a>
+                <a href="{% url 'disco' disco.id %}"><b>{{disco.titulo}}</b></a>
                 </p>
                 {% endif %}
             {% endfor %}     
             <!--************************************************-->
+            <hr> <!-- Linea divisoria -->
             {% if banda.link_sptf %}
                 <p><a href="{{banda.link_sptf}}" target="_blank">{{banda.nombreBanda}} en Spotify</a></p>
             {% endif %}
