--- a/capsuladiscos/core/templates/core/base.html
+++ b/capsuladiscos/core/templates/core/base.html
@@ -21,7 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Estilos del template  -->
-    <link href="{% static 'core/css/clean-blog.min.css' %}" rel="stylesheet">
+    <link href="{% static 'core/css/cssEstiloCapsula.min.css' %}" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'core/img/Capsula_ico.ico' %}"> <!-- Ícono del sitio -->
@@ -34,7 +34,7 @@
             <!--<a class="navbar-brand" href="{% url 'home' %}">Cápsula Discos</a> --><!-- Título redimensiona con tamaño responsivo -->
             <a href="{% url 'home' %}"><img src="{% static 'core/img/Capsula_h_low_transp.png' %}"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span><!-- Dibuja barras de menú -->
+                 <span class="navbar-toggler-icon"></span><!-- Dibuja barras de menú -->
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -87,7 +87,7 @@
     <footer class="footer text-faded text-center py-5">
         <!--coloca footer en una caja-->
         <div class="container">
-            <p class="m-0">
+            <p>
                 {% if LINK_TW %}
                 <!-- LINK_TW: identificador de enlace a TWITTER -->
                 <a href="{{LINK_TW}}" target="_blank">
