--- a/capsuladiscos/catalogo/templates/catalogo/musico.html
+++ b/capsuladiscos/catalogo/templates/catalogo/musico.html
@@ -1,68 +1,99 @@
-{% extends 'core/base.html' %} <!-- Invoca la plantilla "base.html" -->
+{% extends 'core/base.html' %}
+<!-- Invoca la plantilla "base.html" -->
 <!-- Bloque particular de esta página -->
-{% load static %} <!-- carga contenido estático-->
-{% block title %}Catálogo{% endblock %} <!--Bloque de título para esta página -->
+{% load static %}
+<!-- carga contenido estático-->
+{% block title %}Catálogo{% endblock %}
+<!--Bloque de título para esta página -->
 
 <!--bloque de imagen de fondo-->
 {% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
 <!--bloque de título y subtítulo-->
 {% block headers %}
-    <h2>:: Artistas ::</h2>
-    <span class="subheading">{{musico.nombreArt}}</span>
+<h2>:: Artistas ::</h2>
+<span class="subheading">{{musico.nombreArt}}</span>
 {% endblock %}
 
 {% block content %}
-    <div>
-         <div class="col-lg-5 col-md-4 offset-lg-1">
-         <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
-            <img class="img-fluid" src="{{musico.imgMusico.url}}" alt="">
-            <p><h4>{{musico.nombreArt}}</h4></p>
-            <p><b>Nombre Real:</b> {{musico.nombreReal}}</p>
-            <!-- INSERTAR ACÁ BANDAS, ROLES Y PRODUCCIONES -->
+<div>
+    <div class="col-lg-5 col-md-4 offset-lg-1">
+        <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
+        <img class="img-fluid" src="{{musico.imgMusico.url}}" alt="">
+        <p>
+        <h4>{{musico.nombreArt}}</h4>
+        </p>
+        <!--************************PLATAFORMAS DEL MÚSICO************************-->
+         {% if musico.link_ig %}
+        <!-- musico.link_ig: identificador de enlace a INSTAGRAM -->
+        <a href="{{musico.link_ig}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if musico.link_fb %}
+        <!-- musico.link_fb: identificador de enlace a FACEBOOK -->
+        <a href="{{musico.link_fb}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if musico.link_tw %}
+        <!-- musico.link_tw: identificador de enlace a TWITTER -->
+        <a href="{{musico.link_tw}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        <p></p>
+        <b>Nombre Real</b>
+        <br>
+        {{musico.nombreReal}}
+        <!-- INSERTAR ACÁ BANDAS, ROLES Y PRODUCCIONES -->
+        <p></p>
+        <b>Bandas o Proyectos</b>
+        <br>
+        {% for integrantes in integranteBanda %}
+        <!--TODOS LOS INTEGRANTES DE BANDAS-->
+        {% if integrantes.musico_id == musico.id %}
+        <!-- BANDA(S) DE ESTE ID DE MÚSICO-->
+        <a href="{% url 'banda' integrantes.banda.id %}">{{integrantes.banda.nombreBanda}}</a>
+            <!--Carga roles en la banda desde el modelo y busca según índice del rol del artista-->
+            {% for indice, item in integrantes.ROL_BANDA %}
+            {% if indice == integrantes.rol %}
+            ({{item}})
+            {% endif %}
+            {% endfor %}
+        <br>
+        {% endif %}
+        {% endfor %}
+        <p></p>
+        <b>Colaboraciones Realizadas</b>
+        {% for produccion in produccionDisco %}
+        <!--TODOS LOS MÚSICOS COLABORADORES-->
+        {% if produccion.musico_id == musico.id %}
+        <!-- COLABORACIONES DE ESTE ID DE MÚSICO-->
+            <a class="navbar-brand" href="{% url 'disco' produccion.disco.id %}"><img class="img-fluid"
+                    src="{{produccion.disco.caratula.url}}" alt=""></a>
+            <a href="{% url 'disco' produccion.disco.id %}">{{produccion.disco.titulo}}</a>
             <br>
-            <p><b>Bandas o Proyectos:</b></p>
-            {% for integrantes in integranteBanda %} <!--TODOS LOS INTEGRANTES DE BANDAS-->
-                {% if integrantes.musico_id == musico.id %} <!-- BANDA(S) DE ESTE ID DE MÚSICO-->
-                    <p><a href="{% url 'banda' integrantes.banda.id %}">{{integrantes.banda.nombreBanda}}</a>
-                    <!--Carga roles en la banda desde el modelo y busca según índice del rol del artista--> 
-                    {% for indice, item in integrantes.ROL_BANDA %}
-                        {% if indice == integrantes.rol %}
-                            ({{item}})
-                        {% endif %}
-                    {% endfor %}
-                    </p>
-                {% endif %}
-            {% endfor %}    
-            <br>
-            <p><b>Colaboraciones Realizadas:</b></p>
-            {% for produccion in produccionDisco %} <!--TODOS LOS MÚSICOS COLABORADORES-->
-                {% if produccion.musico_id == musico.id %} <!-- COLABORACIONES DE ESTE ID DE MÚSICO-->
-                    <p>
-                    <a class="navbar-brand" href="{% url 'disco' produccion.disco.id %}"><img class="img-fluid" src="{{produccion.disco.caratula.url}}" alt=""></a>
-                    <a href="{% url 'disco' produccion.disco.id %}">{{produccion.disco.titulo}}</a>
-                    </p>
-                    <p><b>Rol: </b><!--Carga roles desde el modelo y busca según índice del rol del artista-->
-                        {% for indice, item in produccion.ROL_PRODUCCION %}
-                            {% if indice == produccion.rol %}
-                                {{item}}
-                            {% endif %}
-                        {% endfor %}
-                        </p>
-                    <p><b>Descripción: </b>{{produccion.descripcion}}</p>
-                    <br>
-                {% endif %}
-            {% endfor %} 
-            <!--************************************************-->
-            <hr> <!-- Linea divisoria -->
-            {% if musico.link_ig %}
-                <p><a href="{{musico.link_ig}}" target="_blank">Instagram de {{musico.nombreArt}}</a></p>
+            <b>Rol: </b>
+            <!--Carga roles desde el modelo y busca según índice del rol del artista-->
+            {% for indice, item in produccion.ROL_PRODUCCION %}
+            {% if indice == produccion.rol %}
+            {{item}}
             {% endif %}
-            {% if musico.link_fb %}
-                <p><a href="{{musico.link_fb}}" target="_blank">Facebook de {{musico.nombreArt}}</a></p>
-            {% endif %}
-            {% if musico.link_tw %}
-                <p><a href="{{musico.link_tw}}" target="_blank">Twitter de {{musico.nombreArt}}</a></p>
-            {% endif %}
-        </div>
+            {% endfor %}
+        <br>
+        <b>Descripción: </b>{{produccion.descripcion}}</p>
+        <br>
+        {% endif %}
+        {% endfor %}
     </div>
-{% endblock %} 
+</div>
+{% endblock %}
