--- a/capsuladiscos/catalogo/templates/catalogo/banda.html
+++ b/capsuladiscos/catalogo/templates/catalogo/banda.html
@@ -1,70 +1,115 @@
-{% extends 'core/base.html' %} <!-- Invoca la plantilla "base.html" -->
+{% extends 'core/base.html' %}
+<!-- Invoca la plantilla "base.html" -->
 <!-- Bloque particular de esta página -->
-{% load static %} <!-- carga contenido estático-->
-{% block title %}Catálogo{% endblock %} <!--Bloque de título para esta página -->
+{% load static %}
+<!-- carga contenido estático-->
+{% block title %}Catálogo{% endblock %}
+<!--Bloque de título para esta página -->
 
 <!--bloque de imagen de fondo-->
 {% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
 <!--bloque de título y subtítulo-->
 {% block headers %}
-    <h2>:: Bandas / Solistas ::</h2>
-    <span class="subheading">{{banda.nombreBanda}}</span>
+<h2>:: Bandas / Solistas ::</h2>
+<span class="subheading">{{banda.nombreBanda}}</span>
 {% endblock %}
 
 {% block content %}
-    <div>
-         <div class="col-lg-5 col-md-4 offset-lg-1">
-         <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
-            <img class="img-fluid" src="{{banda.imgBanda.url}}" alt="">
-            <h4>{{banda.nombreBanda}}</h4>
-            <p><b>Descripción de la Banda o Solista:</b></p>
-            <p>{{banda.descripBanda}}</p>
-            
-            <!-- INSERTAR ACÁ INTEGRANTES, ROLES DE LA BANDA Y DISCOS -->
-            <p><b>Integrantes:</b></p>
-            {% for integrantes in integranteBanda %} <!--TODOS LOS INTGRANTES DE BANDA-->
-                {% if integrantes.banda_id == banda.id %} <!-- INTEGRANTES DE ESTE ID DE BANDA-->
-                <p>
-                <a href="{% url 'musico' integrantes.musico.id %}">{{integrantes.musico.nombreArt}}</a>
-                <!--Carga roles en la banda desde el modelo y busca según índice del rol del artista--> 
-                {% for indice, item in integrantes.ROL_BANDA %}
-                {% if indice == integrantes.rol %}
-                    ({{item}})
-                {% endif %}
-            {% endfor %}
-                </p>
-                {% endif %}
-            {% endfor %}    
-            <br>
-            <p><b>Discos Publicados:</b></p>
-            {% for disco in discos %} <!--TODOS LOS DISCOS -->
-                {% if disco.banda_id == banda.id %} <!-- DISCOS DE ESTE ID DE BANDA-->
-                <p>
-                <a class="navbar-brand" href="{% url 'disco' disco.id %}"><img class="img-fluid" src="{{disco.caratula.url}}" alt=""></a>
-                <a href="{% url 'disco' disco.id %}"><b>{{disco.titulo}}</b></a>
-                </p>
-                {% endif %}
-            {% endfor %}     
-            <!--************************************************-->
-            <hr> <!-- Linea divisoria -->
-            {% if banda.link_sptf %}
-                <p><a href="{{banda.link_sptf}}" target="_blank">{{banda.nombreBanda}} en Spotify</a></p>
-            {% endif %}
-            {% if banda.link_bndcmp %}
-                <p><a href="{{banda.link_bndcmp}}" target="_blank">{{banda.nombreBanda}} en Bandcamp</a></p>
-            {% endif %}
-            {% if banda.link_ytb %}
-                <p><a href="{{banda.link_ytb}}" target="_blank">{{banda.nombreBanda}} en Youtube</a></p>
-            {% endif %}
-            {% if banda.link_ig %}
-                <p><a href="{{banda.link_ig}}" target="_blank">Instagram {{banda.nombreBanda}}</a></p>
-            {% endif %}
-            {% if banda.link_fb %}
-                <p><a href="{{banda.link_fb}}" target="_blank">Facebook {{banda.nombreBanda}}</a></p>
-            {% endif %}
-            {% if banda.link_tw %}
-                <p><a href="{{banda.link_tw}}" target="_blank">Twitter {{banda.nombreBanda}}</a></p>
-            {% endif %}
-        </div>
+<div>
+    <div class="col-lg-5 col-md-4 offset-lg-1">
+        <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
+        <img class="img-fluid" src="{{banda.imgBanda.url}}" alt="">
+        <h4>{{banda.nombreBanda}}</h4>
+        <!--***********************BANDA EN PLATAFORMAS *************************-->
+        {% if banda.link_sptf %}
+        <!-- disco.link_sptf: identificador de enlace a SPOTIFY -->
+        <a href="{{banda.link_sptf}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-spotify fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if banda.link_apple %}
+        <!-- disco.link_apple: identificador de enlace a APPLE MUSIC -->
+        <a href="{{banda.link_apple}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-apple music fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if banda.link_ytb %}
+        <!-- disco.link_ytb: identificador de enlace a YOUTUBE -->
+        <a href="{{banda.link_ytb}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if banda.link_ig %}
+        <!-- disco.link_ig: identificador de enlace a INSTAGRAM -->
+        <a href="{{banda.link_ig}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if banda.link_fb %}
+        <!-- disco.link_fb: identificador de enlace a FACEBOOK -->
+        <a href="{{banda.link_fb}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        {% if banda.link_tw %}
+        <!-- disco.link_tw: identificador de enlace a TWITTER -->
+        <a href="{{banda.link_tw}}" target="_blank">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        {% endif %}
+        <p></p>
+        <b>Descripción de la Banda o Solista</b>
+        <br>
+        {{banda.descripBanda}}
+        <!-- INSERTAR ACÁ INTEGRANTES, ROLES DE LA BANDA Y DISCOS -->
+        <p></p>
+        <b>Integrantes</b>
+        <br>
+        {% for integrantes in integranteBanda %}
+        <!--TODOS LOS INTGRANTES DE BANDA-->
+        {% if integrantes.banda_id == banda.id %}
+        <!-- INTEGRANTES DE ESTE ID DE BANDA-->
+        <a href="{% url 'musico' integrantes.musico.id %}">{{integrantes.musico.nombreArt}}</a>
+        <!--Carga roles en la banda desde el modelo y busca según índice del rol del artista-->
+        {% for indice, item in integrantes.ROL_BANDA %}
+        {% if indice == integrantes.rol %}
+        ({{item}})
+        {% endif %}
+        {% endfor %}
+        <br>
+        {% endif %}
+        {% endfor %}
+        <p></p>
+        <b>Discos Publicados</b>
+        <br>
+        {% for disco in discos %}
+        <!--TODOS LOS DISCOS -->
+        {% if disco.banda_id == banda.id %}
+        <!-- DISCOS DE ESTE ID DE BANDA-->
+        <a href="{% url 'disco' disco.id %}"><b>{{disco.titulo}}</b></a>
+        <a class="navbar-brand" href="{% url 'disco' disco.id %}"><img class="img-fluid" src="{{disco.caratula.url}}"
+                alt=""></a>
+        <br>
+        {% endif %}
+        {% endfor %}
     </div>
-{% endblock %} 
+</div>
+{% endblock %}
