--- a/capsuladiscos/catalogo/templates/catalogo/disco.html
+++ b/capsuladiscos/catalogo/templates/catalogo/disco.html
@@ -12,77 +12,93 @@
 {% endblock %}
 
 {% block content %}
-    <div>
-        <!-- *************Reproductor ********** -->
+<div class="alinear-discos">
+    <!--*******************CARÁTULA*****************-->
+    <div class="col-lg-5 offset-lg-1">
+        <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
+        <div><img class="img-fluid" src="{{disco.caratula.url}}" alt=""></div>
+        <h4>
+            {{disco.titulo}}<br>
+            <a href="{% url 'banda' disco.banda.id %}">{{disco.banda}}</a>
+            <br> 
+        </h4>
+    </div>
+    <!-- *************REPRODUCTOR ********** -->
+    <div class="col-lg-5 offset-lg-1">
         <textarea maxlength="300" id="txt_sptf" hidden=True>{{disco.link_sptf}}</textarea>
-        <div class="col-lg-5 col-md-4 offset-lg-1" id="reprod"></div>
+        <div id="reprod"></div>
         <script type="text/javascript">
             capturar();
             function capturar(){
-               document.getElementById("reprod").innerHTML += document.getElementById("txt_sptf").value;
+            document.getElementById("reprod").innerHTML += document.getElementById("txt_sptf").value;
             }
         </script>
-        <!--************************************-->
-        <div class="col-lg-5 col-md-4 offset-lg-1">
-            <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
-            <img class="img-fluid" src="{{disco.caratula.url}}" alt="">
-            <h4>{{disco.titulo}}</h4>
-            (Publicado el {{disco.fechaDisco | date:'d/m/Y'}})
-            <br>
-            <!-- Espacio para La tienda Nacional -->
-            <a href="{% url 'banda' disco.banda.id %}"><h4>{{disco.banda}}</h4></a>
+    </div>
+    <!-- *************DATOS DEL DISCO ********** -->
+    <div class="col-lg-5 offset-lg-1">
+        <!--************************OTRAS PLATAFORMAS DEL DISCO************************-->
+        {% if disco.link_apple %}
+            <!-- disco.link_apple: identificador de enlace a APPLE MUSIC -->
+            <a class="info-plataformas" href="{{disco.link_apple}}" target="_blank">
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-apple music fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+        {% endif %}
+        {% if disco.link_ytb %}
+            <!-- disco.link_ytb: identificador de enlace a YOUTUBE -->
+            <a class="info-plataformas" href="{{disco.link_ytb}}" target="_blank">
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+        {% endif %}
+        <!-- ::::::::Espacio para LA TIENDA NACIONAL ::::::::-->
+        <P></P>
+        <!-- {% if disco.link_tienda_cd or disco.link_tienda_vin or disco.link_tienda_cas %}
             <img width=30% src="{% static 'core/img/TNacional_logo.jpg' %}"><br>
+        {% endif %} -->
+        <div>
             {% if disco.link_tienda_cd %}
+                <a href="{{disco.link_tienda_cd}}" target="_blank"><img width=30% src="{% static 'core/img/TNacional_logo.jpg' %}"></a>
                 <a href="{{disco.link_tienda_cd}}" target="_blank"><b>Comprar CD</b></a>
                 <br>
             {% endif %}
             {% if disco.link_tienda_vin %}
+                <a href="{{disco.link_tienda_vin}}" target="_blank"><img width=30% src="{% static 'core/img/TNacional_logo.jpg' %}"></a>
                 <a href="{{disco.link_tienda_vin}}" target="_blank"><b>Comprar VINILO</b></a>
                 <br>
             {% endif %}
             {% if disco.link_tienda_cas %}
+                <a href="{{disco.link_tienda_cas}}" target="_blank"><img width=30% src="{% static 'core/img/TNacional_logo.jpg' %}"></a>
                 <a href="{{disco.link_tienda_cas}}" target="_blank"><b>Comprar CASSETTE</b></a>
                 <br>
             {% endif %}
-            <p></p>
-            <b>Información del Disco</b><br>{{disco.descripDisco}}
-            <!-- CRÉDITOS, DATOS Y ROLES DE LA PRODUCCIÓN-->
-            <p></p>
-            <b>Créditos y colaboraciones de la producción</b><br>
-            {% for produccion in produccionDisco %} <!--TODAS LAS COLABORACIONES DE MÚSICOS-->
-                {% if produccion.disco_id == disco.id %} <!-- COLABORACIONES DE ESTE ID DE DISCO-->
-                    <a href="{% url 'musico' produccion.musico.id %}">{{produccion.musico.nombreArt}}</a><br>
-                    <b>Rol: </b>
-                    {% for indice, item in produccion.ROL_PRODUCCION %}
-                        {% if indice == produccion.rol %}
-                            {{item}}
-                        {% endif %}
-                    {% endfor %}
-                    <br>
-                    <b>Descripción: </b>{{produccion.descripcion}}
-                    <br>
-                {% endif %}
-            {% endfor %}
-            <p></p>
-            <b>"{{disco.titulo}}" en otras Plataformas</b><br>
-            {% if disco.link_apple %}
-                <!-- disco.link_apple: identificador de enlace a APPLE MUSIC -->
-                <a href="{{disco.link_apple}}" target="_blank">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-apple music fa-stack-1x fa-inverse"></i>
-                    </span>
-                </a>
-            {% endif %}
-            {% if disco.link_ytb %}
-                <!-- disco.link_ytb: identificador de enlace a YOUTUBE -->
-                <a href="{{disco.link_ytb}}" target="_blank">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
-                    </span>
-                </a>
-            {% endif %}
         </div>
+        <!--:::::::::::::::::::::::::::::::::::::::::::::::::::::-->
+        <p></p><br>
+
+        <b>Información del Disco</b><br>
+        <span class="info-creditos" >Publicación: {{disco.fechaDisco}}</span><!--{{disco.fechaDisco | date:'d/m/Y'}}-->
+        <div class="info-creditos">{{disco.descripDisco}}</div>
+        <!-- CRÉDITOS, DATOS Y ROLES DE LA PRODUCCIÓN-->
+        <p></p>
+        <b>Créditos y colaboraciones de la producción</b><br>
+        {% for produccion in produccionDisco %} <!--TODAS LAS COLABORACIONES DE MÚSICOS-->
+            {% if produccion.disco_id == disco.id %} <!-- COLABORACIONES DE ESTE ID DE DISCO-->
+                <a class="info-creditos" href="{% url 'musico' produccion.musico.id %}">{{produccion.musico.nombreArt}}</a>
+                {% for indice, item in produccion.ROL_PRODUCCION %}
+                    {% if indice == produccion.rol %}
+                        <span class="info-rol"> ({{item}})</span>
+                    {% endif %}
+                {% endfor %}
+                <div class="info-creditos">{{produccion.descripcion}}</div>
+            {% endif %}
+        {% endfor %}
     </div>
+</div>
+
+    
 {% endblock %} 
