--- a/capsuladiscos/catalogo/templates/catalogo/musico.html
+++ b/capsuladiscos/catalogo/templates/catalogo/musico.html
@@ -15,17 +15,16 @@
 {% endblock %}
 
 {% block content %}
-<div>
-    <div class="col-lg-5 col-md-4 offset-lg-1">
-        <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
-        <img class="img-fluid" src="{{musico.imgMusico.url}}" alt="">
-        <p>
+<div class="alinear-discos">
+    <!-- :::::::::::::::: PLATAFORMAS, DESCRIPCIÓN, BANDAS O PROYECTOS DEL MÚSICO ::::::::::::::-->
+    <div class="col-lg-5 offset-lg-1">
         <h4>{{musico.nombreArt}}</h4>
+        <div class="info">{{musico.nombreReal}}</div>
         </p>
-        <!--************************PLATAFORMAS DEL MÚSICO************************-->
+        <!--***** PLATAFORMAS DEL MÚSICO ****-->
          {% if musico.link_ig %}
         <!-- musico.link_ig: identificador de enlace a INSTAGRAM -->
-        <a href="{{musico.link_ig}}" target="_blank">
+        <a class="info-plataformas" href="{{musico.link_ig}}" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -34,7 +33,7 @@
         {% endif %}
         {% if musico.link_fb %}
         <!-- musico.link_fb: identificador de enlace a FACEBOOK -->
-        <a href="{{musico.link_fb}}" target="_blank">
+        <a class="info-plataformas" href="{{musico.link_fb}}" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -43,7 +42,7 @@
         {% endif %}
         {% if musico.link_tw %}
         <!-- musico.link_tw: identificador de enlace a TWITTER -->
-        <a href="{{musico.link_tw}}" target="_blank">
+        <a class="info-plataformas" href="{{musico.link_tw}}" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -51,49 +50,71 @@
         </a>
         {% endif %}
         <p></p>
-        <b>Nombre Real</b>
-        <br>
-        {{musico.nombreReal}}
-        <!-- INSERTAR ACÁ BANDAS, ROLES Y PRODUCCIONES -->
-        <p></p>
+        <!-- INSERTAR ACÁ BANDAS y ROLES-->
         <b>Bandas o Proyectos</b>
         <br>
         {% for integrantes in integranteBanda %}
         <!--TODOS LOS INTEGRANTES DE BANDAS-->
         {% if integrantes.musico_id == musico.id %}
         <!-- BANDA(S) DE ESTE ID DE MÚSICO-->
-        <a href="{% url 'banda' integrantes.banda.id %}">{{integrantes.banda.nombreBanda}}</a>
+        <a class="info-creditos" href="{% url 'banda' integrantes.banda.id %}">{{integrantes.banda.nombreBanda}}</a>
             <!--Carga roles en la banda desde el modelo y busca según índice del rol del artista-->
             {% for indice, item in integrantes.ROL_BANDA %}
-            {% if indice == integrantes.rol %}
-            ({{item}})
-            {% endif %}
+                {% if indice == integrantes.rol %}
+                    <span class="info-rol"> ({{item}})</span>
+                {% endif %}
             {% endfor %}
         <br>
         {% endif %}
         {% endfor %}
         <p></p>
-        <b>Colaboraciones Realizadas</b>
-        {% for produccion in produccionDisco %}
-        <!--TODOS LOS MÚSICOS COLABORADORES-->
-        {% if produccion.musico_id == musico.id %}
-        <!-- COLABORACIONES DE ESTE ID DE MÚSICO-->
-            <a class="navbar-brand" href="{% url 'disco' produccion.disco.id %}"><img class="img-fluid"
-                    src="{{produccion.disco.caratula.url}}" alt=""></a>
-            <a href="{% url 'disco' produccion.disco.id %}">{{produccion.disco.titulo}}</a>
-            <br>
-            <b>Rol: </b>
-            <!--Carga roles desde el modelo y busca según índice del rol del artista-->
-            {% for indice, item in produccion.ROL_PRODUCCION %}
-            {% if indice == produccion.rol %}
-            {{item}}
+    </div>
+    <!-- ::::::::: IMAGEN DEL MÚSICO :::::::-->
+    <div class="col-lg-5 offset-lg-1">
+        <!-- ImageField tiene atributo url que genera ruta correcta automáticamente ocupando variable MEDIA_URL en settings.py -->
+        <img class="img-fluid" src="{{musico.imgMusico.url}}" alt="">
+        <p>
+        
+    </div>
+     <!-- :::::::::::::::: COLABORACIONES DEL MÚSICO ::::::::::::::-->
+    <div >
+        <b class="col-lg-2 offset-lg-1">Colaboraciones Realizadas</b>
+        <P></P>
+        <div class="alinear-discos">
+            {% for produccion in produccionDisco %}
+            <!--TODOS LOS MÚSICOS COLABORADORES-->
+            {% if produccion.musico_id == musico.id %}
+            <!-- COLABORACIONES DE ESTE ID DE MÚSICO-->
+                <div class="col-lg-3 offset-lg-1 catalogo-nom-disco">
+                    <a href="{% url 'disco' produccion.disco.id %}"><img class="img-fluid" src="{{produccion.disco.caratula.url}}" alt=""></a>
+                    <a href="{% url 'disco' produccion.disco.id %}">{{produccion.disco.titulo}}</a>
+                    <b class="info-plataformas">({{produccion.disco.fechaDisco | date:'Y'}})</b>
+                    <br><a href="{% url 'banda' produccion.disco.banda.id %}">{{produccion.disco.banda}}</a>
+                    <br>
+                    <!--Carga roles desde el modelo y busca según índice del rol del artista-->
+                    {% for indice, item in produccion.ROL_PRODUCCION %}
+                    {% if indice == produccion.rol %}
+                        <b class="info-rol"> ({{item}})</b>
+                        <!-- <input id="bandId" name="bandId" type="hidden" value="1"> -->
+                    {% endif %}
+                    {% endfor %}
+                    <br><span class="info-creditos">{{produccion.descripcion}}</span>
+                    <p></p>
+                </div>
             {% endif %}
             {% endfor %}
-        <br>
-        <b>Descripción: </b>{{produccion.descripcion}}</p>
-        <br>
-        {% endif %}
-        {% endfor %}
+            <!-- valida -->
+            <!-- <script type="text/javascript">
+                flager();
+                function flager(){
+                    if (document.getElementById("bandId").value == "1") {
+                        document.write('<span class="info-creditos">No tiene colaboraciones en Cápsula Discos</span>');            
+                    }
+                }
+            </script> -->
+            <!-- :::::::-->
+            <!-- <span class="info-creditos">No tiene colaboraciones en Cápsula Discos</span> -->
+        </div>
     </div>
 </div>
 {% endblock %}
