--- a/capsuladiscos/catalogo/templates/catalogo/banda.html
+++ b/capsuladiscos/catalogo/templates/catalogo/banda.html
@@ -7,10 +7,10 @@
 <!--Bloque de título para esta página -->
 
 <!--bloque de imagen de fondo-->
-{% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+{% block background %}{{banda.imgBanda.url}}{% endblock %}
 <!--bloque de título y subtítulo-->
 {% block headers %}
-<h2>:: Bandas / Solistas ::</h2>
+<h2>:: Banda / Solista ::</h2>
 <span class="subheading">{{banda.nombreBanda}}</span>
 {% endblock %}
 
