--- a/capsuladiscos/contact/templates/contact/contact.html
+++ b/capsuladiscos/contact/templates/contact/contact.html
@@ -10,7 +10,7 @@
     <!-- <span class="subheading">Contacto</span> -->
 {% endblock %}
 {% block content %}
-<section class="page-section about-heading">
+<section style="border: dashed; border-color: darkgray;" class="page-section about-heading">
   <div class="container">
     <div class="about-heading-content">
       <div class="row">
