--- a/capsuladiscos/core/templates/core/base.html
+++ b/capsuladiscos/core/templates/core/base.html
@@ -31,10 +31,9 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <!--<a class="navbar-brand" href="{% url 'home' %}">Cápsula Discos</a> --><!-- Título redimensiona con tamaño responsivo -->
             <a href="{% url 'home' %}"><img src="{% static 'core/img/Capsula_h_low_transp.png' %}"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span><!-- Dibuja barras de menú -->
+                <span class="navbar-toggler-icon"></span><!-- Dibuja barras de menú -->
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -87,7 +86,7 @@
     <footer class="footer text-faded text-center py-5">
         <!--coloca footer en una caja-->
         <div class="container">
-            <p>
+            <p class="m-0">
                 {% if LINK_TW %}
                 <!-- LINK_TW: identificador de enlace a TWITTER -->
                 <a href="{{LINK_TW}}" target="_blank">
@@ -138,11 +137,13 @@
             <p class="copyright text-muted">Desarrollado por <a href="https://www.instagram.com/maurosolar/">Mauro Solar</a></p>
         </div>
     </footer>
-    <!-- Bootstrap **** Losstrap js-->
-    <!-- <script src="{% static 'core/vendor/bootstrap/js/bootstrap.js' %}"></script> -->
-    <!-- Versión mínima de bootstrap js-->
-    <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'core/js/clean-blog.min.js' %}"></script>
+     <!-- Bootstrap **** Los archivos JavaScript siempre en la parte inferior dentro del body -->
+     <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+     <!-- Versión completa de bootstrap js-->
+     <!-- <script src="{% static 'core/vendor/bootstrap/js/bootstrap.js' %}"></script> -->
+     <!-- Versión mínima de bootstrap js-->
+     <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+     <script src="{% static 'core/js/clean-blog.min.js' %}"></script>
 </body>
 
 </html>
